# insurance-quotes-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api.py  app.py  docker-compose.yml  endpoints.py  endpoints_fastapi.py  main.py  main_fastapi.py  pyproject.toml  requirements.txt  vercel.json
data/: insurance.db
public/: landing_page.html
static/: swagger.yaml
tests/: conftest.py  test_api.py
