[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-quotes-api"
version = "0.1.0"
description = "Flask-based insurance quotes API with gender inference, Swagger docs and health checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "fnldesign" }
]
keywords = ["flask", "insurance", "api", "swagger", "sqlite"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "Flask>=2.2,<4",
  "flask-restx>=1.1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28",
  "psutil>=5.9",
  "SQLAlchemy>=1.4",
  "psycopg[binary]"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "flake8",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"" = ["*.sql", "*.md"]
